2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2005-11-29 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2005-06-11 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to 1.7b
	  Shortened SHORT
	  Removed MAINTAINER
	* INSTALL: Use install_config_file for nasd.conf

2005-04-11 Sergey Lipnevich <sergey@sourcemage.org>
	* DETAILS: upgrade to 1.7a.

2005-04-03 Sergey Lipnevich <sergey@sourcemage.org>
	* BUILD: separate into BUILD and INSTALL part;
	* DETAILS: BUILD API 2;
	* INSTALL: create.

2004-11-15 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DETAILS: updated to 1.7, changed SOURCE_URL to
	  http://nas.codebrilliance.com/nas/$SOURCE

2004-02-22 Unet <audio@sourcemage.org>
	* DEPENDS: Added X11-SERVER as depends (#5879 needs xmkmf)

2003-11-21 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: copy nasd.conf.eg to nasd.conf if that doesn't exist

2003-03-15 Jose Bernardo Silva <jbernardo@sourcemage.org>
	* BUILD, DETAILS, HISTORY: Created this spell
