@@ -1,1 +1,2 @@
-depends X11-SERVER
+depends X11-SERVER &&
+depends rman
