@@ -1,0 +1,14 @@
+#!/bin/bash
+
+PROGRAM="/usr/X11R6/bin/nasd"
+RUNLEVEL=3
+NEEDS="+remote_fs alsa"
+
+. /etc/sysconfig/nasd
+
+[ ! -z ${NAS_PORT_OFFSET} ] && ARGS=":${NAS_PORT_OFFSET}"
+[ "${NAS_LOCAL_ONLY}" == "yes" ] && ARGS="${ARGS} -local"
+ARGS="${ARGS} -b"
+
+. /etc/init.d/smgl_init
+
