@@ -1,0 +1,23 @@
+# this file configures the settings for the nasd init script
+
+## Server options:
+
+#NAS_PORT_OFFSET specifies which port to use. The default port is 8000,
+#so setting this to 1 would mean nasd will use port 8001.
+NAS_PORT_OFFSET=1
+
+#NAS_LOCAL_ONLY makes the nasd server only respond to audio streams from
+#the local machine (localhost) and ignore network connections.
+NAS_LOCAL_ONLY=yes
+
+## Client options
+
+#NAS_AUDIOSERVER defines the hostname or ip-address on which the server
+#is listening. localhost by default.
+NAS_AUDIOSERVER=localhost
+
+#NAS_PORT specifies the port on which the server is listening.
+#it's 8000+n where n is the offset specified on the server.
+#the default is 8000
+NAS_PORT=8001
+
