@@ -1,3 +1,8 @@
+2006-06-20 Arjan Bouter <abouter@sourcemage.org>
+	* DEPENDS: added rman
+	* init.d: added init script and config
+	* profile.d: added config script
+
 2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
 	* DETAILS: (automated) Add KEYWORDS
 
